Attempt to fix how this displays on iOS

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -616,6 +616,9 @@ form input[type="text"], form textarea{
 /* Hide scrollbar for Chrome, Safari and Opera */
 body::-webkit-scrollbar {
   display: none;
+  -webkit-appearance: none;
+  width: 0;
+  height: 0;
 }
 
 /* Hide scrollbar for IE, Edge and Firefox */
